gcc/testsuite/gdc.test/compilable/test11471.d
// REQUIRED_ARGS: -profile

void main() nothrow
{
    // Error: asm statements are assumed to throw
    version(GNU)
        asm { ""; }
    else
        asm { nop; }
}
